--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ html, body, #root {
 body {
   background: #000 url('./assets/background.jpg') no-repeat;
   background-size: cover;
-  -webkit-fomt-smoothing: antialiased !important;
+  -webkit-font-smoothing: antialiased !important;
 }
 
 body, input, button {
